<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#0ABAB5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/my_page_back_button"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/back_button"
                android:backgroundTint="#0ABAB5"
                android:backgroundTintMode="multiply" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/my_page"
                android:textAlignment="textStart" />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0"
            android:background="#00000000" />

        <Button
            android:id="@+id/my_page_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80808080"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/my_page_button1" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#00000000" />

        <Button
            android:id="@+id/my_page_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80808080"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/my_page_button2" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#00000000" />

        <Button
            android:id="@+id/my_page_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80808080"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/my_page_button3" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>