<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/write_review_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/back_button_2"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintBottom_toTopOf="@+id/divider12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/write_review_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:foregroundGravity="center"
            android:text="@string/write_review"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/write_review_post_button"
            app:layout_constraintStart_toStartOf="@+id/write_review_back_button"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/write_review_post_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/post"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider12"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#808080"
            app:layout_constraintTop_toBottomOf="@id/write_review_back_button" />

        <RatingBar
            android:id="@+id/write_review_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@+id/divider13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider12" />

        <View
            android:id="@+id/divider13"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#808080"
            app:layout_constraintTop_toBottomOf="@id/write_review_star" />

        <EditText
            android:id="@+id/write_review_editText"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginTop="15dp"
            android:hint="@string/write_review"
            android:background="@drawable/edit_frame"
            android:inputType="textMultiLine|textNoSuggestions|textVisiblePassword"
            android:maxLength="1000"
            android:textCursorDrawable="@color/black"
            android:gravity="top|start"
            android:autofillHints="@string/write_review"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider13" />

        <TextView
            android:id="@+id/editText_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/default_editText_num"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/write_review_editText"
            app:layout_constraintTop_toBottomOf="@+id/write_review_editText" />

        <View
            android:id="@+id/divider10"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="#808080"
            app:layout_constraintBottom_toTopOf="@id/write_review_user_image_text"
            app:layout_constraintTop_toBottomOf="@id/editText_num" />

        <TextView
            android:id="@+id/write_review_user_image_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableStart="@android:drawable/ic_menu_camera"
            android:gravity="center"
            android:text="@string/review_user_image_text"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/write_review_editText"
            app:layout_constraintTop_toBottomOf="@id/divider10" />

        <ImageView
            android:id="@+id/review_image"
            android:layout_width="232dp"
            android:layout_height="148dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/contentDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_image_button"
            app:srcCompat="@drawable/application_icon" />

        <Button
            android:id="@+id/review_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/review_user_image_button"
            android:backgroundTint="#808080"
            app:layout_constraintStart_toStartOf="@id/editText_num"
            app:layout_constraintTop_toBottomOf="@id/divider10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>